# hackathon-near-contract

./: Cargo.toml  rustfmt.toml
src/: lib.rs
src/application/repository/: internal_major.rs  internal_score.rs  internal_subject.rs  internal_user.rs  mod.rs
src/application/service/: impl_user.rs  mod.rs
src/application/services/: impl_degree.rs  impl_major.rs  impl_score.rs  impl_subject.rs  impl_user.rs  mod.rs
src/models/: contract.rs  degree.rs  major.rs  mod.rs  score.rs  subject.rs  user.rs
src/services/: major_service.rs  mod.rs  user_service.rs
