[package]
name = "vbiacademy"
version = "0.1.0"
edition = "2021"
authors = ["Dang Quang Vu <eamondang@gmail.com>"]
repository = "https://gitlab.com/vbi-academy/contract"
description = "The Contract For E-Learning platform - VBI Academy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.1"
unidecode = "0.3.0"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
